--- a/racinggame/v4.final.html
+++ b/racinggame/v4.final.html
@@ -161,8 +161,8 @@ function populatePopup(){
     //generate question
     var origverb = wordsArray[currentWord].word_string;
 
-    var sentenceBefore = '<span class = "sbefore">This is the sentence that comes before.</span>';
-    var sentenceAfter = '<span class = "safter">This is the next sentence.</span></br>';
+    var sentenceBefore = '<span class = "sbefore">This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. </span>';
+    var sentenceAfter = '<span class = "safter">This is the next sentence. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. This is the sentence that comes before. </span></br>';
     toDisplayPhrase+=sentenceBefore;
     beforeWord+=sentenceBefore;
     var qstring = '<span name = "question"> ';
